package sample.Metods;

import javafx.scene.layout.Pane;

/**
 * Интерфейс и его реализация
 * @author Kozhevnikov Alexander pPi-171
 * @version 1.2
 */

public interface Rectangle {
    void draw(Pane pane);
}
