@startuml

title __METODS's Class Diagram__\n

  namespace sample {
    namespace Metods {
      abstract class sample.Metods.Decoration {
          + Decoration()
          + draw()
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.ParallelLines {
          + circle : Circle[]
          + ParallelLines()
          + draw()
          - drawBeads()
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      interface sample.Metods.Rectangle {
          {abstract} + draw()
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.TextInside {
          + lines : Line[]
          ~ c : Color[]
          + TextInside()
          + draw()
          - drawTape()
      }
    }
  }
  

  sample.Metods.Decoration .up.|> sample.Metods.Rectangle
  sample.Metods.Decoration o-- sample.Metods.Rectangle : egg
  sample.Metods.ParallelLines -up-|> sample.Metods.Decoration
  sample.Metods.TextInside -up-|> sample.Metods.Decoration


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
